# universal-gpu-driver

./: Cargo.toml  README.md
src/: detector.rs  downloader.rs  error.rs  gui.rs  installer.rs  main.rs
