[package]
name = "universal_gpu_driver"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.22"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
sysinfo = "0.29"
winreg = "0.50"
windows = { version = "0.48", features = [
    "Data_Xml_Dom",
    "Foundation",
    "System_SystemServices",
    "Win32_System_Registry",
] }